Fixed image distortion

--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -199,6 +199,10 @@
     width: 75%;
     margin: 4.5rem auto;
   }
+
+  .btn{
+    margin: auto;
+  }
 }
 
 @media screen and (max-width: 991.9px) {
@@ -447,7 +451,7 @@
 
       .box-1,
       .box-2 {
-        height: 250px;
+        height: 250px !important;
       }
     }
   }
@@ -485,6 +489,7 @@
   .gallery-section {
     .gallery-img-section {
       gap: 0.3rem;
+      height: 200px !important;
 
       .box-1 {
         gap: 0.3rem;
@@ -492,7 +497,8 @@
 
       .box-1,
       .box-2 {
-        height: 200px;
+
+        height: 200px !important;
       }
     }
   }
